--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 </head>
 
 <body>
-    <h1 class="title">Front-End tech stack</h1>
-    <input type="text" value="Hello" />
-
+    <ul>
+        <li class="technology">HTML</li>
+        <li class="technology">CSS</li>
+        <li class="technology">React</li>
+        <li class="technology">Redux</li>
+    </ul>
+    <ul>
+        <li class="tool">Webpack</li>
+        <li class="tool">npm</li>
+        <li class="tool">ESLint</li>
+        <li class="tool">Babel</li>
+    </ul>
     <script src="index.js"></script>
 </body>
 
