--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Event handler</title>
+    <title>Change handler</title>
 </head>
 
 <body>
-    <div class="pagination">
-        <button class="pagination__page" data-page-number="1">1</button>
-        <button class="pagination__page" data-page-number="2">2</button>
-        <button class="pagination__page" data-page-number="3">3</button>
-    </div>
+    <button class="btn">JavaScript</button>
+    <button class="btn">HTML</button>
 
     <script src="index.js"></script>
 </body>
