--- a/index.html
+++ b/index.html
@@ -4,87 +4,19 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Google calendar</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Counter</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body class="page">
-    <header class="header">
-        <button class="button create-event-btn">
-        <i class="fas fa-plus create-event-btn__icon"></i>Create
-      </button>
-        <div class="navigation">
-            <button data-direction="today" class="navigation__today-btn button">
-          Today
-        </button>
-            <button data-direction="prev" class="icon-button navigation__nav-icon">
-          <i class="fas fa-chevron-left"></i>
-        </button>
-            <button data-direction="next" class="icon-button navigation__nav-icon">
-          <i class="fas fa-chevron-right"></i>
-        </button>
-            <span class="navigation__displayed-month">Jun - Jul 2019</span>
-        </div>
-    </header>
-    <section class="calendar">
-        <header class="calendar__header"></header>
-        <div class="calendar__body">
-            <div class="calendar__week-container">
-                <div class="calendar__time-scale"></div>
-                <div class="calendar__week"></div>
-            </div>
-        </div>
-    </section>
-    <div class="modal hidden overlay">
-        <div class="modal__content">
-            <div class="create-event">
-                <button class="create-event__close-btn"><i class="tiny material-icons">close</i></button>
-                <form class="event-form">
-                    <input type="text" name="title" placeholder="Title" class="event-form__field" />
-                    <div class="event-form__time">
-                        <input type="date" name="date" class="event-form__field" />
-                        <input type="time" name="startTime" class="event-form__field" />
-                        <span>-</span>
-                        <input type="time" name="endTime" class="event-form__field" />
-                    </div>
-                    <textarea name="description" placeholder="Description" class="event-form__field"></textarea>
-                    <button type="submit" class="event-form__submit-btn">Create</button>
-                </form>
-            </div>
+    <div class="page">
+        <div class="counter">
+            <button data-action="decrease" class="counter__button">-</button>
+            <span class="counter__value">0</span>
+            <button data-action="increase" class="counter__button">+</button>
         </div>
     </div>
-    <div class="modal__update hidden ">
-        <div class="modal__content">
-            <div class="create-event">
-                <button class="create-event__close-btn update-close__btn"><i class="tiny material-icons">close</i></button>
-                <form class="event-form-update">
-                    <input type="text" name="title" placeholder="Title" class="event-form-update__field" />
-                    <div class="event-form__time">
-                        <input type="date" name="date" class="event-form-update__field" />
-                        <input type="time" name="startTime" class="event-form-update__field" />
-                        <span>-</span>
-                        <input type="time" name="endTime" class="event-form-update__field" />
-                    </div>
-                    <textarea name="description" placeholder="Description" class="event-form-update__field"></textarea>
-                    <button type="submit" class="event-form__submit-btn event-form__submit-btn-update">Create</button>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div class="popup  overlay2 hidden">
-        <div class="popup__overlay"></div>
-        <div class="popup__content">
-            <button class="delete__event-btn"><i class="small material-icons">delete</i></button>
-            <button class="update__event-btn"><i class="small material-icons">border_color</i></button>
-            <button class="close__event-btn"><i class="small material-icons">close</i></button>
-        </div>
-    </div>
-    <script src="scripts/index.js" type="module"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
