--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
 </head>
 
 <body>
-    <h1 class="title">Todo List</h1>
-    <main class="todo-list">
-        <div class="actions">
-            <input class="task-input" type="text" />
-            <button class="btn create-task-btn">Create</button>
-        </div>
-        <ul class="list"></ul>
-    </main>
-    <script src="src/scripts/index.js" type="module"></script>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
